--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,14 +18,14 @@
                  </button>
                  @Html.ActionLink("Upload Files", "Upload", "Upload", new { area = "" }, new { @class = "navbar-brand" })
              </div>
-             @*<div class="navbar-collapse collapse">
+             <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Upload", "Upload", "Home")</li>
+                <li>@Html.ActionLink("Search", "Index", "Search")</li>
+                @*<li>@Html.ActionLink("Upload", "Upload", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
-        </div>*@
+        </div>
          </div>
     </div>
     <div class="container body-content">
